salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/NVMStatsSF__NVM_Call_Summary__c.object-meta.xml
<CustomObject>
    <label>NVM Call Summary</label>
    <nameField>
        <displayFormat>NVMCS-{0000000000}</displayFormat>
        <label>NVM CS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Call Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>