salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__After_Call_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__After_Call_Work_Time__c</fullName>
    <inlineHelpText>Amount of time last Agent spent on post Call activity</inlineHelpText>
    <label>After Call Work Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>