salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent2__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Agent 2 Name</inlineHelpText>
    <label>Agent2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NVM_Call_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>