salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent2_ID__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent2_ID__c</fullName>
    <inlineHelpText>Agent ID of the last known agent who worked on the Call/Case (if transferred)</inlineHelpText>
    <label>Agent2 ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>