salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Agent name (if known - links to User record in Salesforce)</inlineHelpText>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>