salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Consult_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Consult_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Time in seconds where additional agents were consulted but not subsequently transferred to (typically when an inbound caller is placed on hold).  See Warm Transfer Time for the duration of consultations which lead to transfers.  Counts towards Handle Time</inlineHelpText>
    <label>Agent Consult Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>