salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Event_String__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Event_String__c</fullName>
    <inlineHelpText>Agent events related to this call with timestamp, agenr Id and duration in seconds - helps show where consultations fited into the call.  Format yyyyMMddHHmmss-[Agent Id]-[duration],...</inlineHelpText>
    <label>Agent Event String</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>