salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_List__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_List__c</fullName>
    <inlineHelpText>All agent IDs and durations where e.g. 123-30, 456-60 means agent 123 for 30s followed by agent 456 for 1 minute.  Excludes hold times</inlineHelpText>
    <label>Agent List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>