salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Percent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Percent__c</fullName>
    <inlineHelpText>Percentage of recording the Agent alone was talking</inlineHelpText>
    <label>Agent Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>