salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Ring_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Ring_Duration__c</fullName>
    <inlineHelpText>Total number of seconds agent phones rang</inlineHelpText>
    <label>Total Ring Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>