salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Agent_Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Agent_Talk_Time__c</fullName>
    <inlineHelpText>Total talk time in seconds (excluding Ringing, Hold, Consult, Transfer and Post Call work time). Add this and Agent2 Transfer time for All Agent talk time</inlineHelpText>
    <label>Agent Talk Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>