salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__AgentChkStr__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AgentChkStr__c</fullName>
    <description>System Checkstring - contributions from Agent Stats feed</description>
    <inlineHelpText>System Checkstring</inlineHelpText>
    <label>AgentChkStr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>