salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Automation_Segment__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Automation_Segment__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total duration of applets (Menu, Announcements, etc.)</inlineHelpText>
    <label>Automation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>