salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__AutoPhaseStart__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__AutoPhaseStart__c</fullName>
    <inlineHelpText>The start of the last Automation phase identified during the Call - if there is post Call automation, this will be used to calculate the duration</inlineHelpText>
    <label>AutoPhaseStart</label>
    <type>DateTime</type>
</CustomField>