salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Call_Rating__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Call_Rating__c</fullName>
    <inlineHelpText>Comma delimited list of call quality ratings</inlineHelpText>
    <label>Call Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>