salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Call_Recording__c</fullName>
    <inlineHelpText>URL of the Call recording</inlineHelpText>
    <label>Call Recording</label>
    <type>Url</type>
</CustomField>