salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Call_Transcription__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Call_Transcription__c</fullName>
    <description>Searchable Call Transcription</description>
    <inlineHelpText>Searchable Call Transcription</inlineHelpText>
    <label>Call Transcription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>