salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CallDisposition__c</fullName>
    <inlineHelpText>Call Result value copied from the Call Task if one was found</inlineHelpText>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>