salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CallEndTime__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CallEndTime__c</fullName>
    <inlineHelpText>Date/Time stamp of Call End</inlineHelpText>
    <label>CallEndTime</label>
    <type>DateTime</type>
</CustomField>