salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CallGuid__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CallGuid__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for this Call/Case</inlineHelpText>
    <label>CallGuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>