salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Categories__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Categories__c</fullName>
    <inlineHelpText>Categories Matched in Speech Analytics</inlineHelpText>
    <label>Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>