salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Channel__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Channel__c</fullName>
    <inlineHelpText>Channel used to import this record. (A configured Channel is analagous to a Contact World Account accessed via a Cloud URL and specifies a time offset into the past)</inlineHelpText>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>