salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Confidence__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Confidence__c</fullName>
    <defaultValue>&quot;Unknown&quot;</defaultValue>
    <description>Transcription Confidence</description>
    <inlineHelpText>Transcription Confidence</inlineHelpText>
    <label>Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>