salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Consult_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Consult_Time__c</fullName>
    <inlineHelpText>Total in seconds of the time the Call or Case was put on hold by the person handling it</inlineHelpText>
    <label>Hold Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>