salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__ConversationGuid__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__ConversationGuid__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Groups Interactions which are part of the same customer conversation, such as callbacks</inlineHelpText>
    <label>Conversation GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>