salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__CR_Start_Immediate__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__CR_Start_Immediate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Call Recording Applet which first turns on Call Recording starts the recording without waiting for the two parties to be connected.
Use Workflow (on create+update) to set this flag for Calls which don&apos;t defer CR Start based on the NVM Service</description>
    <inlineHelpText>Checked if Call Recording Applet which first turns on Call Recording starts the recording without waiting for the two parties to be connected.
Use Workflow (on create+update) to set this flag for Calls which don&apos;t defer CR Start based on the NVM Service</inlineHelpText>
    <label>CR Start Immediate</label>
    <type>Checkbox</type>
</CustomField>