salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Crosstalk_Percent__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Crosstalk_Percent__c</fullName>
    <inlineHelpText>Percentage of recording both connected parties were talking at once</inlineHelpText>
    <label>Crosstalk Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>