salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__dateAgentId__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__dateAgentId__c</fullName>
    <description>Used as an INDEXED key to find a summary of an agent&apos;s Calls on a given day. You may need to suffix this with Channel if any agents on different NVM clouds have matching Agent IDs.   NB it is NOT unique as many Calls will point to the same agent&apos;s daily summary; it is unique on the agent&apos;s daily summary object</description>
    <externalId>true</externalId>
    <inlineHelpText>Combination field showing today&apos;s date and agent ID. You can use this value in Salesforce Search to find Agent State Summaries</inlineHelpText>
    <label>dateAgentId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>