salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Day_of_Week__c</fullName>
    <formula>CASE(MOD(NVMStatsSF__Date__c - DATE(1900, 1, 7), 7), 
1, &apos;1-Monday&apos;, 
2, &apos;2-Tuesday&apos;, 
3, &apos;3-Wednesday&apos;, 
4, &apos;4-Thursday&apos;, 
5, &apos;5-Friday&apos;, 
6, &apos;6-Saturday&apos;, 
0, &apos;7-Sunday&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of the week this Call or Case was received on in UTC</inlineHelpText>
    <label>UTC Day of Week</label>
    <type>Text</type>
</CustomField>