salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Delivery_Attempts__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Delivery_Attempts__c</fullName>
    <formula>LEN(NVMStatsSF__Ring_List__c) -  LEN(SUBSTITUTE(NVMStatsSF__Ring_List__c, &quot;:&quot;, &quot;&quot;))</formula>
    <inlineHelpText>Number of ring events for Inbound Calls</inlineHelpText>
    <label>Delivery Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>