salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__EndApplet__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__EndApplet__c</fullName>
    <inlineHelpText>The final applet used on this Call/Case record</inlineHelpText>
    <label>End Applet</label>
    <length>70</length>
    <type>Text</type>
</CustomField>