salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__EndReason__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__EndReason__c</fullName>
    <inlineHelpText>Final status of Call</inlineHelpText>
    <label>End Reason</label>
    <length>70</length>
    <type>Text</type>
</CustomField>