salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__EndRecorded__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__EndRecorded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if the Call End Event was received from ContactWorld; indicative of completeness of a Call Summary. The End Event for Inbound Calls and Cases conveys the total duration; if missing, duration is approximated using sub totals known.</inlineHelpText>
    <label>EndRecorded</label>
    <type>Checkbox</type>
</CustomField>