salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__External_Transfer_Phone__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__External_Transfer_Phone__c</fullName>
    <inlineHelpText>External phone number which a call was transferred to</inlineHelpText>
    <label>External Transfer Phone</label>
    <type>Phone</type>
</CustomField>