salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__External_Transfer_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__External_Transfer_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Duration of transfer to a non-Agent number</inlineHelpText>
    <label>External Transfer Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>