salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Fiscal_Quarter__c</fullName>
    <formula>CASE(MONTH(datevalue(  NVMStatsSF__CallTime__c  )) , 
1, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
2, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
3, &quot;Q1-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
4, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
5, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
6, &quot;Q2-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
7, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
8, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
9, &quot;Q3-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
10, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
11, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), 
12, &quot;Q4-&quot;+ TEXT(year(datevalue(NVMStatsSF__CallTime__c))), &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calendar quarter of this Call</inlineHelpText>
    <label>Calendar Quarter</label>
    <type>Text</type>
</CustomField>