salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Hour__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Hour__c</fullName>
    <formula>IF(FLOOR ( MOD( NVMStatsSF__CallTime__c - ($System.OriginDateTime),1) *24) &lt; 10,&apos;0&apos;,&apos;&apos;) &amp; 
TEXT(FLOOR ( MOD( NVMStatsSF__CallTime__c- ($System.OriginDateTime),1) *24))</formula>
    <inlineHelpText>System hour of the day in which the Call started</inlineHelpText>
    <label>UTC Hour</label>
    <type>Text</type>
</CustomField>