salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Interaction_JSON__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Interaction_JSON__c</fullName>
    <inlineHelpText>Raw JSON of the NVM Interaction</inlineHelpText>
    <label>Interaction JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>