salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Interrupted_Time__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Interrupted_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total time in seconds that the Interaction was Interrupted by a higher priority Interaction and hence not being handled</inlineHelpText>
    <label>Interrupted Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>