salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Key_Event_String__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Key_Event_String__c</fullName>
    <inlineHelpText>System summary field of key Call events in order, derived from CheckString. Do not edit the data in this field.</inlineHelpText>
    <label>Key Event String</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>