salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Language__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Language__c</fullName>
    <inlineHelpText>Language of the Interaction per Conversation Analyzer</inlineHelpText>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>