salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Last_Agent_Summary__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Last_Agent_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to Agent Summary for the last agent to contribute an event to this Call</inlineHelpText>
    <label>Last Agent&apos;s Calls this Day</label>
    <referenceTo>NVMStatsSF__NVM_Agent_Summary__c</referenceTo>
    <relationshipLabel>Call Summaries</relationshipLabel>
    <relationshipName>NVM_Call_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>