salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Last_Queue_Result__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Last_Queue_Result__c</fullName>
    <inlineHelpText>Reason for the last Queue exit</inlineHelpText>
    <label>Last Queue Result</label>
    <length>40</length>
    <type>Text</type>
</CustomField>