salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Last_Ring_Duration__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Last_Ring_Duration__c</fullName>
    <formula>VALUE(RIGHT(&quot;0&quot; &amp; SUBSTITUTE(RIGHT(NVMStatsSF__Ring_List__c, 10), &quot;:&quot;, &quot;0000000000&quot;), 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The duration of the last ring event</inlineHelpText>
    <label>Last Ring Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>