salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Local_Date__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Local_Date__c</fullName>
    <inlineHelpText>Date from the perspective of the last agent&apos;s or the Company&apos;s Default TimeZone adjusted for DST if DST applied</inlineHelpText>
    <label>Local Date</label>
    <type>Date</type>
</CustomField>