salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Local_Hour__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Local_Hour__c</fullName>
    <defaultValue>&quot;00&quot;</defaultValue>
    <inlineHelpText>Start hour from the perspective of the last agent&apos;s or the Company&apos;s default Timezone with DST applied</inlineHelpText>
    <label>Local Hour</label>
    <length>2</length>
    <type>Text</type>
</CustomField>