salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Local_ISO8601_Week__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Local_ISO8601_Week__c</fullName>
    <inlineHelpText>Week number in ISO8601 form of the start of the event in its local timezone</inlineHelpText>
    <label>Local ISO8601 Week</label>
    <length>10</length>
    <type>Text</type>
</CustomField>