salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__MessageTaken__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__MessageTaken__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether a voicemail message was taken during this Call</inlineHelpText>
    <label>Message Taken</label>
    <type>Checkbox</type>
</CustomField>