salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Month_of_Year__c</fullName>
    <formula>CASE(MONTH(datevalue(  NVMStatsSF__CallTime__c )) , 
1, &quot;(01) Jan&quot;, 
2, &quot;(02) Feb&quot;, 
3, &quot;(03) Mar&quot;, 
4, &quot;(04) Apr&quot;, 
5, &quot;(05) May&quot;, 
6, &quot;(06) Jun&quot;, 
7, &quot;(07) Jul&quot;, 
8, &quot;(08) Aug&quot;, 
9, &quot;(09) Sep&quot;, 
10, &quot;(10) Oct&quot;, 
11, &quot;(11) Nov&quot;, 
12, &quot;(12) Dec&quot;, &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Month of year</inlineHelpText>
    <label>Month of Year</label>
    <type>Text</type>
</CustomField>