salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__New_Events__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__New_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Internal flag used to highlight existing summaries for whom new events have materialised</inlineHelpText>
    <label>New Events</label>
    <type>Checkbox</type>
</CustomField>