salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Notes__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Notes__c</fullName>
    <inlineHelpText>Custom text notes entered for this summary record</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>