salesforce-main/src/main/default/objects/NVMStatsSF__NVM_Call_Summary__c/fields/NVMStatsSF__Number_of_Applets__c.field-meta.xml
<CustomField>
    <fullName>NVMStatsSF__Number_of_Applets__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Applets run in the Interaction or Call flow</inlineHelpText>
    <label>Number of Applets</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>